--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.jmx.default-domain=solr-search
 endpoints.jmx.domain=solr-search
 endpoints.jmx.unique-names=true
 
+solr.host=http://localhost:8983/solr
+
