--- a/src/main/resources/production/application.properties
+++ b/src/main/resources/production/application.properties
@@ -25,7 +25,7 @@ spring.http.multipart.max-request-size=15MB
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+#logging.level.org.hibernate=ERROR
 
 
 
