Solr save and index and search in proress

--- a/src/main/resources/dev/application.properties
+++ b/src/main/resources/dev/application.properties
@@ -36,3 +36,6 @@ spring.jmx.default-domain=solr-search
 endpoints.jmx.domain=solr-search
 endpoints.jmx.unique-names=true
 
+solr.host=http://localhost:8983/solr
+razor.baseurl='https://local.corp.apple.com:11443/api/v1
+razor.user=/user
