--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,6 @@ endpoints.jmx.domain=solr-search
 endpoints.jmx.unique-names=true
 
 solr.host=http://localhost:8983/solr
+razor.baseurl='https://local.corp.apple.com:11443/api/v1
+razor.user=/user
 
