--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,10 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>searchapi</finalName>
