Moved batchsize in prop and removed unrelevant indexes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ solr.host=http://localhost:8983/solr
 razor.baseurl='https://local.corp.apple.com:11443/api/v1
 razor.user=/user
 
+mongodb.export.batchsize=500
+
