--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,20 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=userDetailsDB
 spring.data.mongodb.username=testing
-spring.data.mongodb.password=testing
+spring.data.mongodb.password=ENC(erLPC/U50M/hAikZFmpbIA==)
+jasypt.encryptor.password=masterPassword
+
+#TO Encrypt password use below command
+#Go to resource folder and run following command. Also replace input password with your password
+#java -cp jasypt-1.9.2.jar org.jasypt.intf.cli.JasyptPBEStringEncryptionCLI input=xsdfewef password=masterPassword
 
 server.port=8080
 server.context-path=/searchapi
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=15MB
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+
+#logging
+logging.level.org.springframework.data=debug
 
 spring.jmx.default-domain=solr-search
 
